--- a/config.toml
+++ b/config.toml
@@ -33,6 +33,9 @@ index_format = "fuse_json"
 # accent_color = "#3584e4"
 # accent_color_dark = "#ff7800"
 
+# Google Analytics 4
+google_analytics = "G-4D4FQZQPG7"
+
 
 [extra.nav]
 # Navbar configuration for Duckquill
